--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>John Doe</h1>
-            <p>Web Developer & Designer</p>
+            <h1>Dilmith Wathsala</h1>
+            <p>Quality Assurance, Project Management, UI Design, IOT</p>
         </div>
     </header>
 
@@ -30,15 +30,15 @@
         <section id="introduction" class="section">
             <h2>Introduction</h2>
             <div class="intro-content">
-                <img src="https://via.placeholder.com/200" alt="Profile Picture" class="profile-pic">
+                <img src="dilmth1.jpg" alt="Profile Picture" class="profile-pic">
                 <div class="intro-text">
-                    <p>Hello! I'm John Doe, a passionate web developer with expertise in HTML, CSS, JavaScript, and various frameworks. I specialize in creating responsive, user-friendly websites that deliver exceptional user experiences.</p>
-                    <p>With 3 years of professional experience, I've worked on diverse projects ranging from small business websites to complex web applications. I'm committed to continuous learning and staying updated with the latest web technologies.</p>
+                    <p>Hello! I'm Dilmith Wathsala, a passionate web developer with expertise in HTML, CSS, JavaScript, and various frameworks. I specialize in creating responsive, user-friendly websites that deliver exceptional user experiences.</p>
+                    <p>With 6 months of professional experience, I've worked on diverse projects ranging from small business applications to complex applications. I'm committed to continuous learning and staying updated with the latest technologies.</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fas fa-envelope"></i></a>
+                        <a href="https://www.linkedin.com/in/dilmith-wathsala/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/dilmithwathsala"><i class="fab fa-github"></i></a>
+                        <a href="https://twitter.com/dilmithwathsala"><i class="fab fa-twitter"></i></a>
+                        <a href="mailto:dilmithwathsala@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
@@ -68,23 +68,23 @@
             <h2>Career Development Plan</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <div class="timeline-date">2023 - Present</div>
+                    <div class="timeline-date">2025 - Present</div>
                     <div class="timeline-content">
-                        <h3>Junior Web Developer</h3>
-                        <p>Gain hands-on experience with front-end development. Master HTML, CSS, JavaScript, and React.</p>
+                        <h3>Intern Project Manager</h3>
+                        <p>Gain hands-on experience with Project Management tools, and learn how to manage projects effectively.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-date">2024 - 2025</div>
+                    <div class="timeline-date">2025 - 2026</div>
                     <div class="timeline-content">
-                        <h3>Mid-Level Developer</h3>
-                        <p>Expand skills to include back-end technologies like Node.js and databases. Work on full-stack projects.</p>
+                        <h3>Associate Quality Assurance Engineer</h3>
+                        <p>Expand skills to include testing methodologies, automation tools, and quality assurance best practices.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-date">2026 - 2028</div>
                     <div class="timeline-content">
-                        <h3>Senior Developer/Team Lead</h3>
+                        <h3>Senior Quality Assurance Engineer</h3>
                         <p>Take on leadership responsibilities. Mentor junior developers and contribute to architectural decisions.</p>
                     </div>
                 </div>
@@ -100,13 +100,13 @@
                 <h3>Skills Development Roadmap</h3>
                 <ul class="skills-list">
                     <li>
-                        <span class="skill-name">HTML/CSS</span>
+                        <span class="skill-name">Manual Testing</span>
                         <div class="skill-bar">
                             <div class="skill-level" style="width: 90%;"></div>
                         </div>
                     </li>
                     <li>
-                        <span class="skill-name">JavaScript</span>
+                        <span class="skill-name">Automation(Selenium)</span>
                         <div class="skill-bar">
                             <div class="skill-level" style="width: 80%;"></div>
                         </div>
@@ -139,17 +139,17 @@
                 <div class="cv-left">
                     <div class="cv-section">
                         <h3>Personal Information</h3>
-                        <p><strong>Name:</strong> John Doe</p>
-                        <p><strong>Email:</strong> john.doe@example.com</p>
-                        <p><strong>Phone:</strong> (123) 456-7890</p>
-                        <p><strong>Address:</strong> 123 Main St, City, Country</p>
+                        <p><strong>Name:</strong> Dilmith Wathsala</p>
+                        <p><strong>Email:</strong> dilmith.wathsala@gmail.com</p>
+                        <p><strong>Phone:</strong> 070 6423059</p>
+                        <p><strong>Address:</strong> Pimbura, Agalawatta, Sri Lanka</p>
                     </div>
                     <div class="cv-section">
                         <h3>Education</h3>
-                        <p><strong>Bachelor of Computer Science</strong><br>
-                        University of Technology, 2018-2022</p>
-                        <p><strong>Web Development Bootcamp</strong><br>
-                        Coding Academy, 2022</p>
+                        <p><strong>Bachelor of Information Technology</strong><br>
+                        Sri Lanka Institute of Information Technology, 2021-2025</p>
+                        <p><strong>Primary & Secondary Education</strong><br>
+                        C.W.W.Kannangara Central College, Mathugama, 2015-2018</p>
                     </div>
                     <div class="cv-section">
                         <h3>Skills</h3>
@@ -160,26 +160,31 @@
                             <li>Responsive Design</li>
                             <li>Git Version Control</li>
                             <li>UI/UX Principles</li>
+                            <li>Agile Methodologies</li>
+                            <li>Quality Assurance Testing</li>
+                            <li>Project Management</li>
+                            <li>Internet of Things (IoT)</li>
+                            <li>Manual Testing</li>
                         </ul>
                     </div>
                 </div>
                 <div class="cv-right">
                     <div class="cv-section">
                         <h3>Work Experience</h3>
-                        <p><strong>Junior Web Developer</strong><br>
-                        ABC Tech Solutions, 2022-Present</p>
+                        <p><strong>Project Management Internship</strong><br>
+                        Bank of Ceylon, Sri Lanka, 2024-2025</p>
                         <ul>
-                            <li>Developed and maintained client websites</li>
-                            <li>Implemented responsive designs</li>
+                            <li>Did User Acceptance Testing of BOC Flex Mobile Banking App</li>
+                            <li>Tested whole Bill Payment function transactions with the system</li>
                             <li>Collaborated with design team to implement UI/UX improvements</li>
                         </ul>
-                        <p><strong>Web Development Intern</strong><br>
+                        <!-- <p><strong>Web Development Intern</strong><br>
                         XYZ Digital Agency, Summer 2021</p>
                         <ul>
                             <li>Assisted in building WordPress sites</li>
                             <li>Tested websites across browsers and devices</li>
                             <li>Participated in client meetings</li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <div class="cv-section">
                         <h3>Projects</h3>
@@ -191,7 +196,7 @@
                 </div>
             </div>
             <div class="download-cv">
-                <a href="#" class="btn">Download Full CV (PDF)</a>
+                <a href="Dilmith Wathsala Resume.pdf" class="btn">Download Full CV (PDF)</a>
             </div>
         </section>
 
