--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#career-plan">Career Plan</a></li>
             <li><a href="#cv">Curriculum Vitae</a></li>
             <li><a href="#certificates">Certificates</a></li>
-            <li><a href="#presentation">Presentation</a></li>
+           
         </ul>
     </nav>
 
@@ -45,24 +45,64 @@
         </section>
 
         <section id="reflective-journal" class="section">
-            <h2>Reflective Journal - What I Learned in PPW</h2>
-            <div class="journal-entry">
-                <h3>Week 1: Introduction to Web Development</h3>
-                <p>This week I learned the fundamentals of HTML and CSS. I was surprised by how powerful CSS can be in creating visually appealing layouts. The box model concept was initially challenging but practicing with different elements helped me understand it better.</p>
-            </div>
-            <div class="journal-entry">
-                <h3>Week 2: Responsive Design</h3>
-                <p>Media queries were a game-changer for me. Learning how to make websites adapt to different screen sizes opened my eyes to the importance of mobile-first design. I created my first responsive layout and tested it on multiple devices.</p>
-            </div>
-            <div class="journal-entry">
-                <h3>Week 3: JavaScript Basics</h3>
-                <p>JavaScript was more complex than I expected. The concept of variables, functions, and DOM manipulation took time to grasp. However, after building a simple interactive form, I started seeing how JavaScript brings websites to life.</p>
-            </div>
-            <div class="journal-entry">
-                <h3>Week 4: Project Work</h3>
-                <p>Working on my first complete project helped me understand how all the pieces fit together. Debugging was frustrating at times, but solving each issue gave me a sense of accomplishment and deeper understanding.</p>
-            </div>
-        </section>
+<h2>Reflective Journal - What I Learned in PPW</h2>
+
+<div class="journal-entry">
+<h3>Week 1: Business Writing</h3>
+<p>This week I learned the fundamentals of business writing. I was surprised by how important clear and concise communication is in a professional setting. Understanding the audience and purpose of each piece of writing was a key takeaway.</p>
+</div>
+<div class="journal-entry">
+<h3>Week 2: Formal Email Writing</h3>
+<p>This week I learned the structure and tone required for formal email communication. I practiced writing emails for different scenarios, focusing on clarity and professionalism. Understanding the importance of subject lines and concise messaging was a key takeaway.</p>
+</div>
+<div class="journal-entry">
+<h3>Week 3: Memo Writing</h3>
+<p>This week I learned the structure and purpose of memos in a business context. I practiced writing concise memos that clearly communicated key information and action items. Understanding the importance of a clear subject line and a professional tone was a key takeaway.</p>
+</div>
+<div class="journal-entry">
+<h3>Week 4: Presentation Skills</h3>
+<p>This week I learned how to create effective presentations. I focused on structuring my content logically, using visuals to enhance understanding, and practicing my delivery to engage the audience. Understanding the importance of body language and voice modulation was a key takeaway.</p>
+</div>
+<div class="journal-entry">
+<h3>Week 5: Formal Letter Writing</h3>
+<p>This week I learned the structure and tone required for formal letter writing. I practiced writing letters for different scenarios, focusing on clarity and professionalism. Understanding the importance of salutations, closings, and concise messaging was a key takeaway.</p>
+</div>
+<div class="journal-entry">
+<h3>Week 6: How to Face an Interview</h3>
+<p>This week I learned how to prepare for job interviews. I focused on researching the company, understanding the job description, and practicing common interview questions. Understanding the importance of body language and making a good first impression was a key takeaway.</p>
+</div>
+<div class="journal-entry">
+<h3>Week 7: Telephone Etiquette</h3>
+<p>This week I learned about professional manners over phone calls. I focused on how to handle difficult conversations, take notes, and actively listen. Understanding the importance of tone and clarity in verbal communication was a key takeaway.</p>
+</div>
+<div class="journal-entry">
+<h3>Week 8: Effective Listening Skills</h3>
+<p>This week I learned how to improve my listening skills in professional settings. I focused on techniques for active listening, such as maintaining eye contact, nodding, and summarizing what the speaker has said. Understanding the importance of empathy and asking clarifying questions was a key takeaway.</p>
+</div>
+<div class="journal-entry">
+<h3>Week 9: Effective Speaking Skills</h3>
+<p>This week I learned how to improve my speaking skills in professional settings. I focused on techniques for clear and confident speech, such as organizing my thoughts, using appropriate language, and engaging my audience. Understanding the importance of tone and pacing was a key takeaway.</p>
+</div>
+<div class="journal-entry">
+<h3>Week 10: Grammar Focus</h3>
+<p>This week I learned about the importance of grammar in professional communication. I focused on common grammatical errors, sentence structure, and the use of formal language. Understanding the impact of grammar on clarity and professionalism was a key takeaway.</p>
+</div>
+
+<div class="journal-entry">
+<h3>Additional Learnings from PPW Course</h3>
+<p>In the Preparation for the Professional World (PPW) course, I developed numerous professional skills that complement my technical knowledge. I learned about:</p>
+<ul>
+<li><strong>Business & Formal Communication:</strong> Writing effective business emails, memos, formal and informal letters with proper tone, structure, and language.</li>
+<li><strong>Presentation Skills:</strong> How to structure presentations, engage the audience, use visual aids effectively, and manage stage presence and voice.</li>
+<li><strong>Interview Preparation:</strong> Strategies for common interview questions, using the STAR method for behavioral questions, body language tips, and virtual vs. in-person interview techniques.</li>
+<li><strong>Telephone Etiquette:</strong> Professional manners over phone calls, including how to handle difficult conversations, take notes, and actively listen.</li>
+<li><strong>Interpersonal Communication:</strong> How to communicate effectively in teams, understand feedback, and resolve conflicts.</li>
+<li><strong>Report Writing:</strong> Planning, drafting, structuring, and presenting professional reports, and creating concise and reader-friendly documents.</li>
+</ul>
+<p>This course emphasized active listening, empathy, professionalism, and clarity in all workplace interactions, which will undoubtedly help me in future roles.</p>
+</div>
+</section>
+
 
         <section id="career-plan" class="section">
             <h2>Career Development Plan</h2>
@@ -205,21 +245,21 @@
             <div class="certificates-grid">
                 <div class="certificate-card">
                     <div class="certificate-img">
-                        <img src="https://via.placeholder.com/300x200" alt="Advanced CSS Certificate">
+                        <img src="Prompt.png" alt="Understanding Prompt Engineering Certificate">
                     </div>
                     <div class="certificate-info">
-                        <h3>Advanced CSS and Sass</h3>
-                        <p>Udemy - Completed May 2023</p>
+                        <h3>Understanding Prompt Engineering</h3>
+                        <p>Datacamp - Completed 2025</p>
                         <a href="#" class="btn">View Certificate</a>
                     </div>
                 </div>
                 <div class="certificate-card">
                     <div class="certificate-img">
-                        <img src="https://via.placeholder.com/300x200" alt="JavaScript Certificate">
+                        <img src="Mongo.png" alt="JavaScript Certificate">
                     </div>
                     <div class="certificate-info">
-                        <h3>Modern JavaScript</h3>
-                        <p>Codecademy - Completed March 2023</p>
+                        <h3>Introduction to MongoDB</h3>
+                        <p>Codecademy - Completed  2024</p>
                         <a href="#" class="btn">View Certificate</a>
                     </div>
                 </div>
@@ -236,7 +276,7 @@
             </div>
         </section>
 
-        <section id="presentation" class="section">
+        <!-- <section id="presentation" class="section">
             <h2>Presentation</h2>
             <div class="presentation-container">
                 <div class="presentation-description">
@@ -256,17 +296,17 @@
                     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ.../embed?start=false&loop=false&delayms=3000" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 John Doe. All rights reserved.</p>
-            <div class="footer-links">
+            <p>&copy; 2025 Dilmith Wathsala. All rights reserved.</p>
+            <!-- <div class="footer-links">
                 <a href="#">Privacy Policy</a>
                 <a href="#">Terms of Service</a>
                 <a href="#">Contact Me</a>
-            </div>
+            </div> -->
         </div>
     </footer>
 </body>
