--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <div class="certificate-info">
                         <h3>Understanding Prompt Engineering</h3>
                         <p>Datacamp - Completed 2025</p>
-                        <a href="#" class="btn">View Certificate</a>
+                        <a href="Prompt.png" class="btn">View Certificate</a>
                     </div>
                 </div>
                 <div class="certificate-card">
@@ -260,12 +260,12 @@
                     <div class="certificate-info">
                         <h3>Introduction to MongoDB</h3>
                         <p>Codecademy - Completed  2024</p>
-                        <a href="#" class="btn">View Certificate</a>
+                        <a href="Mongo.png" class="btn">View Certificate</a>
                     </div>
                 </div>
                 <div class="certificate-card">
                     <div class="certificate-img">
-                        <img src="https://via.placeholder.com/300x200" alt="React Certificate">
+                        <img src="" alt="React Certificate">
                     </div>
                     <div class="certificate-info">
                         <h3>React Front to Back</h3>
