--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/dilmith-wathsala/"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/dilmithwathsala"><i class="fab fa-github"></i></a>
-                        <a href="https://twitter.com/dilmithwathsala"><i class="fab fa-twitter"></i></a>
+                        <!-- <a href="https://twitter.com/dilmithwathsala"><i class="fab fa-twitter"></i></a> -->
                         <a href="mailto:dilmithwathsala@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
@@ -180,8 +180,8 @@
                     <div class="cv-section">
                         <h3>Personal Information</h3>
                         <p><strong>Name:</strong> Dilmith Wathsala</p>
-                        <p><strong>Email:</strong> dilmith.wathsala@gmail.com</p>
-                        <p><strong>Phone:</strong> 070 6423059</p>
+                        <p><strong>Email:</strong> dilmithwathsala@gmail.com</p>
+                        <!-- <p><strong>Phone:</strong> 070 6423059</p> -->
                         <p><strong>Address:</strong> Pimbura, Agalawatta, Sri Lanka</p>
                     </div>
                     <div class="cv-section">
@@ -228,10 +228,10 @@
                     </div>
                     <div class="cv-section">
                         <h3>Projects</h3>
-                        <p><strong>E-commerce Website</strong><br>
-                        Built a fully responsive online store with React and Node.js</p>
-                        <p><strong>Portfolio Template</strong><br>
-                        Created a customizable portfolio template for designers</p>
+                        <p><strong>Traffic violation detection system</strong><br>
+                        Developed a system to detect traffic violations using Python, OpenCV. The system Can detect Numberplates of Violated Vehicles.</p>
+                        <p><strong>Redesigned BOC B Mobile Banking App UI</strong><br>
+                        Improved the user interface and user experience of the BOC B Mobile Banking App, focusing on usability and accessibility.</p>
                     </div>
                 </div>
             </div>
@@ -265,12 +265,12 @@
                 </div>
                 <div class="certificate-card">
                     <div class="certificate-img">
-                        <img src="" alt="React Certificate">
+                        <img src="jira.jpg" alt="Jira Project Management Certificate">
                     </div>
                     <div class="certificate-info">
-                        <h3>React Front to Back</h3>
-                        <p>Coursera - Completed January 2023</p>
-                        <a href="#" class="btn">View Certificate</a>
+                        <h3>Jira Project Management</h3>
+                        <p>Greatlearing - Completed 2025</p>
+                        <a href="jira.jpg" class="btn">View Certificate</a>
                     </div>
                 </div>
             </div>
